# docker_compose_db

./: README.md  compose.yaml  main.py  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
todo/: .env  Dockerfile.dev  pyproject.toml
todo/app/: main.py
todo/tests/: test_main.py
